--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.protobuf'
+
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -121,10 +122,10 @@ dependencies {
     api 'androidx.room:room-rxjava2:2.1.0-alpha06'
 
 //    //realm database
-//    api "io.realm:realm-annotations:$realmVersion"
-//    api "io.realm:realm-android-library:$realmVersion"
-//    api "io.realm:realm-android-kotlin-extensions:$realmVersion"
-//    annotationProcessor "io.realm:realm-annotations-processor:$realmVersion"
+    api "io.realm:realm-annotations:$realmVersion"
+    api "io.realm:realm-android-library:$realmVersion"
+    api "io.realm:realm-android-kotlin-extensions:$realmVersion"
+    annotationProcessor "io.realm:realm-annotations-processor:$realmVersion"
     /**
      * ================================database end==============================
      */
