--- a/build.gradle
+++ b/build.gradle
@@ -52,13 +52,13 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0-alpha07'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
-//        classpath "io.realm:realm-gradle-plugin:$realmVersion"
+        classpath "io.realm:realm-gradle-plugin:$realmVersion"
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.6"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
 
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath 'com.google.firebase:firebase-plugins:1.2.0'
+        classpath 'com.google.firebase:firebase-plugins:1.1.5'
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
