--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,19 @@ android:
 jdk:
 - oraclejdk8
 
+notifications:
+  #  slack: spacecraft-co:gF68bqcbbBYlMZO9QieQ8FWS
+  slack:
+    rooms:
+    - spacecraft-co:gF68bqcbbBYlMZO9QieQ8FWS#spacecraft-android
+    - spacecraft-co:gF68bqcbbBYlMZO9QieQ8FWS#random
+  email:
+    recipients:
+    - hawks.jamesf@gmail.com
+    - 850096823@qq.com
+    on_success: always # default: change
+    on_failure: always # default: always
+
 
 before_install:
 - echo "before_install"
