--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,13 @@ android {
 //        main.manifest.srcFile "src/scrollExprimental/AndroidManifest.xml"
         main.assets.srcDirs += ["src/scrollExprimental/assets"]
 
+        //new layout
+        main.java.srcDirs += ["src/newLayoutExprimental/java"]
+        main.res.srcDirs += ["src/newLayoutExprimental/res"]
+        main.res.srcDirs += ["src/newLayoutExprimental/res-frame-animation"]
+//        main.manifest.srcFile "src/newLayoutExprimental/AndroidManifest.xml"
+        main.assets.srcDirs += ["src/newLayoutExprimental/assets"]
+
     }
 
 //    useLibrary 'android.test.runner'
