--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,7 +49,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'androidx.core:core-ktx:1.0.1'
+    api 'androidx.core:core-ktx:1.0.2'
     api 'androidx.multidex:multidex:2.0.1'
     api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
     api "io.reactivex.rxjava2:rxkotlin:2.2.0"
@@ -60,6 +60,10 @@ dependencies {
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
     api 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
+    debugApi 'me.ele:uetool:1.0.17'
+    releaseApi 'me.ele:uetool-no-op:1.0.17'
+    // if you want to show more attrs about Fresco's DraweeView
+//    debugApi 'me.ele:uetool-fresco:1.0.17'
 
     /**
      * ===============================mvvm start================================
