--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ buildscript {
         daggerVersion = '2.15'
         realmVersion = '5.7.0'
         leakcanaryVersion = '1.6.2'
+        grpcVersion = '1.20.0'
 
         //server
         kotlinVersion = "1.2.71"
@@ -50,10 +51,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha07'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
-        classpath "io.realm:realm-gradle-plugin:$realmVersion"
-        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.6"
+        classpath 'com.android.tools.build:gradle:3.5.0-beta01'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.20"
+        classpath "io.realm:realm-gradle-plugin:5.7.0"
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
 
         classpath 'com.google.gms:google-services:4.2.0'
