解决添加grpc后产生的依赖冲突

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -196,6 +196,9 @@ android {
     }
 
 }
+configurations {
+    all*.exclude group: 'com.google.guava', module: 'listenablefuture'
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':location')
