--- a/network/build.gradle
+++ b/network/build.gradle
@@ -129,7 +129,7 @@ dependencies {
     //restful
     api "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:retrofit-converters:${rootProject.ext.retrofitVersion}"
-    api "com.squareup.retrofit2:converter-protobuf:${rootProject.ext.retrofitVersion}"
+//    api "com.squareup.retrofit2:converter-protobuf:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-wire:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
@@ -137,13 +137,16 @@ dependencies {
 //    api 'com.squareup.okhttp3:okhttp:3.8.1'
     api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
     api "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
-//    api 'com.google.code.gson:gson:2.8.2'
+    //api 'com.google.code.gson:gson:2.8.2'
+    //api 'com.google.protobuf:protobuf-lite:3.0.1'
 
     //rpc
-//    api 'com.google.protobuf:protobuf-lite:3.0.1'//存在依赖冲突
-//    api "io.grpc:grpc-protobuf-lite:${rootProject.ext.grpcVersion}"
-//    api "io.grpc:grpc-okhttp:${rootProject.ext.grpcVersion}"
-//    api "io.grpc:grpc-stub:${rootProject.ext.grpcVersion}"
+    api("io.grpc:grpc-protobuf-lite:${rootProject.ext.grpcVersion}") {//存在依赖冲突
+//        exclude group:  'com.google.guava'
+//        exclude group: 'com.google.protobuf', module: 'protobuf-java'
+    }
+    api "io.grpc:grpc-okhttp:${rootProject.ext.grpcVersion}"
+    api "io.grpc:grpc-stub:${rootProject.ext.grpcVersion}"
 
     /**
      * ===============================network end====================================
