--- a/common/build.gradle
+++ b/common/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
-    api 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
+    api 'androidx.vectordrawable:vectordrawable:1.1.0-beta01'
     debugApi 'me.ele:uetool:1.0.17'
     releaseApi 'me.ele:uetool-no-op:1.0.17'
     // if you want to show more attrs about Fresco's DraweeView
@@ -66,11 +66,11 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-alpha12'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.5.0-beta01'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     // Lifecycles only (no ViewModel or LiveData)
-    api 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
     //If you use Java 8 Language, then observe events with DefaultLifecycleObserver
 //    api 'androidx.lifecycle:lifecycle-common-java8:2.1.0-alpha03'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
