--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,7 @@
         <activity android:name=".ScrollableActivity"/>
         <activity android:name=".FeedbackUtilActivity"/>
         <activity android:name=".ConstraintAndFlexBoxActivity"/>
+        <activity android:name=".CoordinatorLayoutActivity"/>
     </application>
 
 </manifest>
