--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ captures/
 .idea/
 
 # Keystore files
-*.jks
+#*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
