--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,13 @@ buildscript {
         google()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/jcenter" }
-        maven { url = uri "https://repo.spring.io/milestone" }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
     }
     ext {
         compileSdkVersion = 28
         buildToolsVersion = '28.0.3'
-        minSdkVersion = 21//19 kk,21 L,23 M,24 N
+        minSdkVersion = 23//19:kk,21:L,23:M,24:N,26:O,28:P
         targetSdkVersion = 28
         versionCode = 2
         versionName = "2.0.0"
@@ -44,15 +43,10 @@ buildscript {
         realmVersion = '5.7.0'
         leakcanaryVersion = '1.6.2'
         grpcVersion = '1.20.0'
-
-        //server
-        kotlinVersion = "1.2.71"
-        springBootVersion = '2.0.0.M7'
-
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta01'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.20"
+        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
@@ -60,17 +54,6 @@ buildscript {
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.28.1'
         classpath 'com.google.firebase:firebase-plugins:1.1.5'
-//
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-
-        //server
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
-        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlinVersion"
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
-        classpath "gradle.plugin.de.fuerstenau:BuildConfigPlugin:1.1.8"
-        classpath "com.bmuschko:gradle-docker-plugin:3.2.4"
     }
 }
 
@@ -80,7 +63,6 @@ allprojects {
         google()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/jcenter" }
-        maven { url = uri "https://repo.spring.io/milestone" }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
     }
