--- a/network/build.gradle
+++ b/network/build.gradle
@@ -92,6 +92,7 @@ android {
 //            buildConfigField 'boolean','MOCKED_DATA_ACCESS','false'
 //            buildConfigField 'String','WEATHER_URL',"\"http://${getLocalIP()}:8080\""
 //        }
+        println("getLocalIP--->${getLocalIP()}")
 
     }
 }
@@ -133,10 +134,10 @@ dependencies {
     api "com.squareup.retrofit2:converter-wire:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
-    api "com.squareup.retrofit2:retrofit-mock:${rootProject.ext.retrofitVersion}"
+
 //    api 'com.squareup.okhttp3:okhttp:3.8.1'
     api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
-    api "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
+
     //api 'com.google.code.gson:gson:2.8.2'
     //api 'com.google.protobuf:protobuf-lite:3.0.1'
 
@@ -152,5 +153,5 @@ dependencies {
      * ===============================network end====================================
      */
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
-    implementation 'javax.annotation:javax.annotation-api:1.3.1'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
