--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -1,5 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.hawksjamesf.common">
 
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+
+    <application>
+        <activity
+            android:name=".DrawableActivity"
+            android:label="@string/title_activity_drawable"
+            android:theme="@style/AppTheme">
+        </activity>
+    </application>
+
 </manifest>
