--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:name="com.hawksjamesf.common.CoordinatorLayoutActivity"
             android:exported="true"/>
         <activity
+            android:name="com.hawksjamesf.common.PagerViewActivity"
+            android:exported="true"/>
+        <activity
             android:name="com.hawksjamesf.common.ViewPagerActivity"
             android:exported="true"/>
     </application>
