--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.0-beta03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
-        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
+//        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
 
         classpath 'com.google.gms:google-services:4.2.0'
