--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:name="com.hawksjamesf.common.ConstraintAndFlexBoxActivity"
             android:exported="true"/>
         <activity
+            android:name="com.hawksjamesf.common.ConstraintPerformanceActivity"
+            android:theme="@style/AppTheme"
+            android:exported="true">
+        </activity>
+        <activity
             android:name="com.hawksjamesf.common.CoordinatorLayoutActivity"
             android:exported="true"/>
         <activity
