--- a/common/build.gradle
+++ b/common/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     api "com.blankj:utilcode:1.24.2"
     api 'joda-time:joda-time:2.10'
     api 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31"
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
 
