feat--->storage: database sample

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -218,6 +218,7 @@ dependencies {
     implementation project(path: ':chatroom')
     implementation project(path: ':network')
     implementation project(path: ':mockserver')
+    implementation project(path: ':storage')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
