--- a/network/build.gradle
+++ b/network/build.gradle
@@ -120,9 +120,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     testImplementation 'junit:junit:4.12'
+    testImplementation  'org.assertj:assertj-core:3.11.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     api project(path: ':common')
+    debugImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
     /**
      * ===============================network  start====================================
      */
@@ -137,6 +139,7 @@ dependencies {
     api "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
 
     api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     //rpc
     api("io.grpc:grpc-protobuf-lite:${rootProject.ext.grpcVersion}") {//存在依赖冲突
 //        exclude group:  'com.google.guava'
@@ -174,4 +177,5 @@ dependencies {
      */
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 }
