--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     api "io.realm:realm-android-library:5.7.0"
     api "io.realm:realm-android-kotlin-extensions:5.7.0"
     annotationProcessor "io.realm:realm-annotations-processor:5.7.0"
+
+    api 'com.facebook.stetho:stetho:1.5.1'
+    api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
     /**
      * ================================database end==============================
      */
