--- a/common/build.gradle
+++ b/common/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     releaseApi 'me.ele:uetool-no-op:1.0.17'
     // if you want to show more attrs about Fresco's DraweeView
 //    debugApi 'me.ele:uetool-fresco:1.0.17'
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 
     /**
      * ===============================mvvm start================================
@@ -193,6 +195,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-perf:16.2.5'
     implementation 'com.google.firebase:firebase-config:16.5.0'
+
+    api 'com.facebook.stetho:stetho:1.5.1'
+    api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
     /**
      * ===============================monitor end=============================
      */
