--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.hawksjamesf.spacecraft">
-        <application
-            android:name=".DebugableApp">
+
+    <application
+        android:name=".DebugableApp"
+        tools:replace="android:name">
 
 
-        </application>
+    </application>
 </manifest>
