--- a/network/build.gradle
+++ b/network/build.gradle
@@ -117,29 +117,35 @@ static String getLocalIP() {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.11.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     api project(path: ':common')
     debugImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
+
     /**
-     * ===============================network  start====================================
+     *  ===============================network  start====================================
      */
-//    api 'com.squareup.okhttp3:okhttp:3.8.1'
-//    api 'com.android.volley:volley:1.1.1'
+
+    //    api 'com.squareup.okhttp3:okhttp:3.8.1'
+
+    //    api 'com.android.volley:volley:1.1.1'
+    api 'com.squareup.okhttp3:okhttp-tls:4.0.1'
+    testImplementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:4.0.1'
+
     /*
-     >>>>>> http style  start
-     */
+         >>>>>> http style  start
+         */
+
     //restful
     api "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:retrofit-converters:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
-
     api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
     //rpc
     api("io.grpc:grpc-protobuf-lite:${rootProject.ext.grpcVersion}") {//存在依赖冲突
 //        exclude group:  'com.google.guava'
@@ -149,32 +155,40 @@ dependencies {
     api "io.grpc:grpc-stub:${rootProject.ext.grpcVersion}"
 
     /*
-    http style  end
-     */
-
+        http style  end
+         */
 
     /*
-    >>>>>> http serialization  start
-     */
+        >>>>>> http serialization  start
+         */
+
     //json
+
     //api 'com.google.code.gson:gson:2.8.2'
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-moshi:${rootProject.ext.retrofitVersion}"
-//    implementation("com.squareup.moshi:moshi:1.8.0")
-//    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
-//    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
+
+    //    implementation("com.squareup.moshi:moshi:1.8.0")
+
+    //    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
+
+    //    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
 
     //protobuf
+
     //api 'com.google.protobuf:protobuf-lite:3.0.1'
-//    api("com.squareup.retrofit2:converter-protobuf:${rootProject.ext.retrofitVersion}")
-    api("com.squareup.retrofit2:converter-wire:${rootProject.ext.retrofitVersion}")
+
+    //    api("com.squareup.retrofit2:converter-protobuf:${rootProject.ext.retrofitVersion}")
+    api "com.squareup.retrofit2:converter-wire:${rootProject.ext.retrofitVersion}"
+
     /*
-    http serialization  end
-     */
+        http serialization  end
+         */
 
     /**
-     * ===============================network end====================================
+     *  ===============================network end====================================
      */
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation files('libs/jsoup-1.12.1.jar')
 }
