--- a/network/build.gradle
+++ b/network/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
+apply plugin: 'kotlinx-serialization'
+//apply plugin: 'kotlin-kapt'
 
 //apply plugin: 'com.google.protobuf'
 //protobuf {
@@ -122,8 +124,11 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.11.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation project(path: ':annotations')
+    testImplementation project(path: ':annotations')
+    annotationProcessor project(path: ':processor')
     api project(path: ':common')
-    debugImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
+    api project(path: ':mockserver')
 
     /**
      *  ===============================network  start====================================
@@ -168,6 +173,8 @@ dependencies {
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-moshi:${rootProject.ext.retrofitVersion}"
 
+    api 'com.alibaba:fastjson:1.1.71.android'
+
     //    implementation("com.squareup.moshi:moshi:1.8.0")
 
     //    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
@@ -190,5 +197,4 @@ dependencies {
      */
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation files('libs/jsoup-1.12.1.jar')
 }
