--- a/networkExprimental/build.gradle
+++ b/networkExprimental/build.gradle
@@ -61,6 +61,7 @@ dependencies {
      */
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.github.jnr:jnr-unixsocket:0.23"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 }
 
 sourceCompatibility = "7"
